tests/error/poly_errors/arg_mismatch4.err
Error: Expected expression of type `nat` (at $FILE:6:12)
  | 
4 | 
5 | @guppy
6 | def main(x: array[int, bool]) -> None:
  |             ^^^^^^^^^^^^^^^^ Expected expression of type `nat`, got type `bool`

Guppy compilation failed due to 1 previous error
